# agent700-cli

./: .agent700_conversation.json  .env.example  .gitignore  A700cli.py  Agent700 MCP Backend Integration Guide.ini  Agent700API.md  CHANGELOG.md  LICENSE  README.md  applescript_mcp.py  get_notes.py  mcp_server_analyzer.py  notes_demo.py  pyproject.toml  pytest.ini  requirements.txt  run_agent.py  setup.bat  setup.py  setup.sh
a700cli/: __init__.py  __main__.py
a700cli/core/: __init__.py  client.py  conversation.py  mcp.py  models.py  session.py
docs/: PRODUCT_OVERVIEW.md
docs/specs/: 2026-01-29-agent-crud.md  2026-01-29-app-passwords.md  2026-01-29-billing-usage.md  2026-01-29-context-library.md  2026-01-29-document-parsing.md  2026-01-29-mcp-commands.md  2026-01-29-organizations-list.md  2026-01-29-qa-ratings.md  2026-01-29-token-refresh.md  2026-01-29-tool-execution.md
examples/: README.md  batch_process.sh
tests/: __init__.py  test_agent_crud.py  test_app_passwords.py  test_auto_interactive.py  test_backward_compat.py  test_cli_arguments.py  test_file_io.py  test_integration.py  test_mcp_commands.py  test_orgs_list.py  test_token_refresh.py  test_tool_execution.py  test_utils.py  test_websocket.py
tests/fixtures/: sample_input.txt
